Correction to the vertical alignment of quoted amendment structures.

--- a/web/css/amendment.css
+++ b/web/css/amendment.css
@@ -45,6 +45,7 @@
     font-style: italic;
     font-weight: bold;
     text-align: center !important;
+    vertical-align: text-top;
     margin: 0;
     padding-bottom: 5px;
     padding-top: 15px;
@@ -59,6 +60,7 @@
 .amendmentHolder .mod > .quotedStructure {
     width: 50%;
     display: inline-block;
+    vertical-align: text-top;
     padding-left: 0;
     margin:0;
     color:#000;
